# game_of_life

./: .coveragerc  .gitignore  .replit  main.py  pyproject.toml  readme.md
life/: gol.py  graphics.py
scripts/: pytest.sh
spec/: gol_spec.py
